[tool.poetry]
name = "analysis_texas_holdem"
version = "0.1.0"
description = ""
authors = ["yuta3003 <y.nakazawa3003+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
jupyter = "^1.0.0"
texas-holdem = {git = "https://github.com/yuta3003/texas_holdem.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
